final commit 4 the night

--- a/index.html
+++ b/index.html
@@ -5,20 +5,14 @@
 <body>
 <script type="text/javascript" src="scripts/vertex.js"></script>
 <script type="text/javascript" src="scripts/color.js"></script>
+<script type="text/javascript" src="scripts/edge.js"></script>
 <script type="text/javascript" src="scripts/ncube.js"></script>
 
 <script>
 
-console.log("hello, world!");
 
- var PointA = new Vertex([1,2,3]);
- var PointB = new Vertex([1,2,3]);
- var PointC = Vertex.add(PointA, PointB);
 
-console.log(PointC.points);
-
-//let Cube3 = new NCube(3);
-//Cube3.test();
+let Cube3 = new NCube(3);
 
 //var Cube4 = new NCube(4);
 
