--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="scripts/vertex.js"></script>
 <script type="text/javascript" src="scripts/color.js"></script>
 <script type="text/javascript" src="scripts/edge.js"></script>
+<script type="text/javascript" src="scripts/face.js"></script>
 <script type="text/javascript" src="scripts/ncube.js"></script>
 
 <script>
