worked on stuff

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 <script type="text/javascript" src="scripts/color.js"></script>
 <script type="text/javascript" src="scripts/edge.js"></script>
 <script type="text/javascript" src="scripts/face.js"></script>
+<script type="text/javascript" src="scripts/misc.js"></script>
 <script type="text/javascript" src="scripts/ncube.js"></script>
+
 
 <script>
 
 
 
 let Cube3 = new NCube(3);
+let Cube4 = new NCube(4);
 
 //var Cube4 = new NCube(4);
 
