makes, vertexes, edges, faces!

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <title></title>
 </head>
 <body>
+<script type="text/javascript" src="scripts/misc.js"></script>
 <script type="text/javascript" src="scripts/vertex.js"></script>
 <script type="text/javascript" src="scripts/color.js"></script>
 <script type="text/javascript" src="scripts/edge.js"></script>
+
+<script type="text/javascript" src="scripts/face.js"></script>
 <script type="text/javascript" src="scripts/ncube.js"></script>
 
 <script>
